2017-06-28:
* Myscelus is now in Bulgarian translation team.
* Morgan' GAILLARD is now in French translation team.
* Christian Weiske is now in German translation team.

2017-06-16:
* Update script: small cosmetic changes.

2016-05-09:
* Aldo Gate is now in Italian translation team.

2016-04-06:
* Update script:
  - update URL for psi-plus-snapshots git repo
  - rewrite from bash to sh

2016-03-31:
* Sandor Matyi is now in Hungarian translation team.

2015-09-01:
* Update script:
  - add new command line option tr_fu (fast update)
  - add the most important comments

2015-07-02:
* Update script: more verbose output for "tarball" option.

2014-11-12:
* Aurélien TAMISIER is now in French translation team.

2014-04-19:
* Стоян Димитров is now in Bulgarian translation team.

2014-03-17:
* Update script: get strings from all extra patches.

2014-02-04:
* Update script: delete link to Psi+ project at code.google.com

2014-01-18:
* Script was updated: add link to Psi+ project at sourceforge.net

2014-01-11:
* Florian Fieber is now in German translation team.

2013-11-24:
* Apollo is now in Chinese Traditional translation team.

2013-11-22:
* Apollo is now in Chinese Simplified translation team.

2013-10-14:
* Script was updated: small fix due to changes in psi-plus-snapshots location.

2013-07-17:
* Script was updated: do not delete psi_en.qm
  (English translation is required for some template strings)

2013-06-01:
* Script was updated: more verbose for tag option.
* comicfans44 is now in Chinese Simplified translation team.

2013-05-28:
* Script was updated: hostname transifex.net was changed to transifex.com.

2013-05-27:
* Ernesto Avilés Vázquez is now in Spanish translation team.
* LukynZ is now in Czech translation team.

2013-05-14:
* Jakub Liput is now in Polish translation team.

2013-04-04:
* oMid Hedayati is now in Persian translation team.

2013-02-07:
* Alexandro Casanova is now in Brazilian Portuguese translation team.

2013-02-01: